force-app/main/default/objects/CommissionConfiguration__c/CommissionConfiguration__c.object-meta.xml
<CustomObject>
    <label>Commission Configuration</label>
    <nameField>
        <displayFormat>CC-{00000000}</displayFormat>
        <label>Commission Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>