force-app/main/default/objects/CommissionConfiguration__c/fields/Elements7__c.field-meta.xml
<CustomField>
    <fullName>Elements7__c</fullName>
    <label>Elements7</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>