force-app/main/default/objects/CommissionConfiguration__c/fields/Elements7F__c.field-meta.xml
<CustomField>
    <fullName>Elements7F__c</fullName>
    <formula>Elements7__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Elements7F</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>