force-app/main/default/objects/CommissionConfiguration__c/fields/HighEndF__c.field-meta.xml
<CustomField>
    <fullName>HighEndF__c</fullName>
    <formula>HighEnd__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HighEndF</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>