force-app/main/default/objects/CommissionConfiguration__c/fields/IsActived__c.field-meta.xml
<CustomField>
    <fullName>IsActived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Actived</label>
    <type>Checkbox</type>
</CustomField>