force-app/main/default/objects/CommissionConfiguration__c/fields/Reporting__c.field-meta.xml
<CustomField>
    <fullName>Reporting__c</fullName>
    <label>Reporting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>