force-app/main/default/objects/CommissionConfiguration__c/fields/ReportingF__c.field-meta.xml
<CustomField>
    <fullName>ReportingF__c</fullName>
    <formula>Reporting__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ReportingF</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>