force-app/main/default/objects/CommissionConfiguration__c/fields/ResponsiblePerson__c.field-meta.xml
<CustomField>
    <fullName>ResponsiblePerson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Person</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Hisense Indonesia</value>
        </filterItems>
        <filterItems>
            <field>Responsible_Person__c.RecordType__c</field>
            <operation>equals</operation>
            <value>促销员</value>
        </filterItems>
        <filterItems>
            <field>Responsible_Person__c.Shop_Name__r.Sales_Region__c</field>
            <operation>equals</operation>
            <value>Hisense Indonesia</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Responsible_Person__c</referenceTo>
    <relationshipLabel>Commission Configurations</relationshipLabel>
    <relationshipName>Commission_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>