force-app/main/default/objects/CommissionConfiguration__c/fields/ResponsiblePersonUser__c.field-meta.xml
<CustomField>
    <fullName>ResponsiblePersonUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Person User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Commission_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>