force-app/main/default/objects/CommissionConfiguration__c/fields/TotalF__c.field-meta.xml
<CustomField>
    <fullName>TotalF__c</fullName>
    <formula>Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TotalF</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>