force-app/main/default/objects/CommissionConfiguration__c/fields/TVF__c.field-meta.xml
<CustomField>
    <fullName>TVF__c</fullName>
    <formula>TV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TVF</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>