force-app/main/default/objects/CommissionConfiguration__c/recordTypes/HisenseIndonesia.recordType-meta.xml
<RecordType>
    <fullName>HisenseIndonesia</fullName>
    <active>true</active>
    <label>Hisense Indonesia</label>
</RecordType>