force-app/main/default/objects/CommissionConfiguration__c/validationRules/CannotChangeUserWhenActived.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotChangeUserWhenActived</fullName>
    <active>true</active>
    <errorConditionFormula>IsActived__c  &amp;&amp;  ISCHANGED(ResponsiblePerson__c )</errorConditionFormula>
    <errorMessage>Can not Change Response Person When It is Actived</errorMessage>
</ValidationRule>