force-app/main/default/objects/CommissionConfiguration__c/validationRules/EndDateMustGreaterStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDateMustGreaterStartDate</fullName>
    <active>true</active>
    <errorConditionFormula>!ISNULL(EndDate__c) &amp;&amp; EndDate__c &lt;  StartDate__c</errorConditionFormula>
    <errorMessage>End Date Must be later than Start Date</errorMessage>
</ValidationRule>