force-app/main/default/objects/CommissionConfiguration__c/validationRules/WeightNotEqual100.validationRule-meta.xml
<ValidationRule>
    <fullName>WeightNotEqual100</fullName>
    <active>true</active>
    <errorConditionFormula>IsActive__c &amp;&amp; (Elements7__c +  HA__c +  HighEnd__c
	+  Reporting__c +  Total__c +  TV__c ) != 1</errorConditionFormula>
    <errorMessage>The sum of weight must eqauls to 100</errorMessage>
</ValidationRule>